# shard

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/ast/: mod.rs  types.rs
src/codegen/: error.rs  generator.rs  mod.rs
src/error/: mod.rs
src/lexer/: error.rs  mod.rs  token.rs
src/parser/: error.rs  grammar.rs  mod.rs
templates/: README.md  main.shard
tests/: cli_tests.rs  codegen_tests.rs  control_flow_tests.rs  expressions_tests.rs  functions_tests.rs  lexer_tests.rs  parser_tests.rs  snapshot_tests.rs
tests/snapshots/: snapshot_tests__snapshot_boolean_assignment.snap  snapshot_tests__snapshot_command_with_args.snap  snapshot_tests__snapshot_complex_command.snap  snapshot_tests__snapshot_empty_program.snap  snapshot_tests__snapshot_full_example.snap  snapshot_tests__snapshot_mixed_program.snap  snapshot_tests__snapshot_multiple_assignments.snap  snapshot_tests__snapshot_null_assignment.snap  snapshot_tests__snapshot_simple_assignment.snap  snapshot_tests__snapshot_simple_command.snap  snapshot_tests__snapshot_string_assignment.snap
