[package]
name = "shard"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ilyeshdz/shard"
license = "MIT"
description = "A minimalist shell orchestration language that transpiles to POSIX shell scripts"
authors = ["Ilyes Hernandez <hdz.ilyes@gmail.com>"]

[dependencies]
chumsky = "0.9"
miette = "7"
thiserror = "1"
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
insta = "1.40"
assert_fs = "1.1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1